--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10002,3 +10002,11 @@ h3 {
     border-color: #dee2e6;
   }
 }
+.line-vertical {
+  width: 2px;
+  height: 20px;
+  float: left;
+  background-color: gray;
+  margin: 5px;
+  margin-top: 10px;
+}
