--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,12 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.line-vertical {
+    width: 2px;
+    height: 20px;
+    float: left;
+    background-color:gray;
+    margin: 5px;
+    margin-top: 10px;
+}
